<resources>
    <string name="app_name">Cancer Detector</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="header">Aplikasi Deteksi Kangker</string>
    <string name="addImageHeader">Tambahkan Gambar untuk Dianalisis</string>
    <string name="pilih_gambar">Pilih Gambar</string>
    <string name="riwayat_prediksi">Riwayat Prediksi</string>
    <string name="submisson_bangkit">Submission Bangkit Machine Learning</string>
    <string name="header_result">Pada Gambar diatas Terindikasi:</string>
    <string name="artikelKangker">Artikel Terkait Kangker</string>
    <string name="analisisLagi">Analisis lagi</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="label">Label</string>
    <string name="score">Score: 0%</string>
    <string name="hasilAnalisa">Hasil Analisa Gambar</string>
    <string name="riwayatAnalisa">Riwayat Analisa Tersimpan</string>
    <string name="analisisGambar">Analisis Gambar</string>
    <string name="previewImage">Preview Image Analysis</string>
    <string name="tombolGallery">Tombol Gallery atau Tambah Gambar</string>
    <string name="tombolAnalisis">Tombol Analisis</string>
    <string name="tombolArtikel">Tombol Artikel</string>
    <string name="tombolRiwayat">Tombol Riwayat / Tersimpan</string>
    <string name="farisAfra">Faris Afra M - MD 44</string>
    <string name="tombolResetGambar">Tombol Reset Gambar</string>
    <string name="tombolKembali">Tombol Kembali</string>
    <string name="gambarResult">Gambar Hasil Prediksi</string>
    <string name="toggleButton">ToggleButton</string>
    <string name="titleArtikel">Title Artikel</string>
    <string name="gambarArtikel">Gambar Artikel</string>
    <string name="authorArtikel">Author Artikel</string>
    <string name="publishArtikel">Publish At</string>
    <string name="description">Description...</string>
    <string name="lebihLanjut">Lebih Lanjut</string>
    <string name="tombolDetailArtikel">Tombol Detail Artikel</string>
    <string name="tombolHapus">Tombol Hapus</string>
</resources>