<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ResultActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/header"
            style="@style/poppinsExtraBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/header"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/toggle_fav"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subheader"
            style="@style/poppinsLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hasilAnalisa"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/header"
            tools:layout_editor_absoluteX="-16dp" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/llImageView"
            android:layout_width="match_parent"
            android:layout_height="325dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_rounded_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subheader">

            <ImageView
                android:id="@+id/result_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/resultimage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/header_result"
            style="@style/poppinsMedium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:text="@string/header_result"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/llImageView" />

        <TextView
            android:id="@+id/result_text"
            style="@style/poppinsExtraBold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/result"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/header_result" />

        <ImageButton
            android:id="@+id/artikelButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_rounded_corner_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artikelKangker"
            style="@style/poppinsMedium"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/artikelButton"
            app:layout_constraintEnd_toEndOf="@+id/artikelButton"
            app:layout_constraintStart_toStartOf="@+id/artikelButton"
            app:layout_constraintTop_toTopOf="@+id/artikelButton"
            android:gravity="center"/>

        <ImageButton
            android:id="@+id/analyzeButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_rounded_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/artikelButton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/analisisLagi"
            style="@style/poppinsMedium"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/analyzeButton"
            app:layout_constraintEnd_toEndOf="@+id/analyzeButton"
            app:layout_constraintStart_toStartOf="@+id/analyzeButton"
            app:layout_constraintTop_toTopOf="@+id/analyzeButton"
            android:gravity="center"/>

        <ImageButton
            android:id="@+id/historyButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_rounded_corner_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/analyzeButton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/riwayat_prediksi"
            style="@style/poppinsMedium"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/historyButton"
            app:layout_constraintEnd_toEndOf="@+id/historyButton"
            app:layout_constraintStart_toStartOf="@+id/historyButton"
            app:layout_constraintTop_toTopOf="@+id/historyButton"
            android:gravity="center"/>

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/header"
            app:srcCompat="@drawable/baseline_arrow_back_24" />

        <ToggleButton
            android:id="@+id/toggle_fav"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/favbuttonoff"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="ToggleButton"
            android:textOff=" "
            android:textOn=" "
            app:layout_constraintBottom_toBottomOf="@+id/header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/header" />

    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical">-->

<!--        <ImageView-->
<!--            android:id="@+id/result_image"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="400dp"-->
<!--            android:scaleType="fitCenter"-->
<!--            app:srcCompat="@drawable/ic_place_holder"/>-->

<!--        <TextView-->
<!--            android:id="@+id/result_text"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="16dp"-->
<!--            android:text="@string/result" />-->
<!--    </LinearLayout>-->
</ScrollView>